--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,19 @@ application-*.properties
 # VS Code
 .vscode/
 *.code-workspace
+.settings/
+.classpath
+.project
+.factorypath
+
+# Eclipse
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
 
 # Node.js
 node_modules/
@@ -41,10 +54,34 @@ src/main/resources/static/*
 
 # System Files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Gradle
+.gradle/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+/coverage
+.nyc_output
+
+# Additional build targets
+**/target/
+**/out/
+**/build/
+target/**
+build/**
+out/**
+**/classes/
+**/generated/
